--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,12 @@
 body {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-color: #ff420e;
+    margin: 0;
+    padding: 0;
 }
 
 header {
-    background-color: #252B48;
+    background-color:  #f98866;
     color: white;
     text-align: center;
     margin-left: 40px;
@@ -11,6 +14,7 @@ header {
     border-radius: 20px;
     padding: 1px;
     margin-bottom: 50px;
+    margin-top: 10px;
 
 }
 
@@ -35,7 +39,7 @@ header {
 hr {
     margin-top: 80px;
     margin-bottom: 30px;
-    border: 1px solid #252B48;
+    border: 3px solid white;
     margin-left: 40px;
     margin-right: 40px;
 }
@@ -51,7 +55,7 @@ label {
     margin-bottom: 6px;
     font-size: 17px;
     font-weight: bold;
-    color: #252B48;
+    color: white;
     margin-left: 40px;
 }
 
@@ -66,6 +70,8 @@ input {
     margin-left: 40px;
     border-style: solid;
     border-width: 3px;
+    background-color: #80bd9e;
+    color: white;
 }
 
 input:focus {
@@ -81,12 +87,13 @@ button {
     font-size: 16px;
     font-weight: bold;
     border-radius: 10px;
-    background-color: #82CD47;
+    background-color: #89DA59;
     text-align: center;
     border: none;
     cursor: pointer;
     align-items: center;
-    margin-bottom: 150px;
+    margin-bottom: 70px;
+    color: white;
 }
 
 button:hover {
@@ -103,7 +110,7 @@ button:active {
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: #252B48;
+    background-color: #f98866;
     font-size: 16px;
     font-weight: bold;
     color: white;
@@ -127,8 +134,4 @@ a:active {
     color: yellow;
     background-color: transparent;
     text-decoration: underline;
-}
-
-.pemisah {
-    margin-bottom: 400px;
 }
